@@ -5,9 +5,6 @@
 #  Created by Gregory Thomas Brown on 2005-05-10.
 #  Copyright 2005 smtose.org. All rights reserved.
 
-$test_lib_dir ||= File.join(File.dirname(__FILE__), "..", "lib")
-$:.unshift($test_lib_dir) unless $:.include?($test_lib_dir)
-
 require "test/unit"
 
 require "highline"
